started and renamed assn 9

--- a/assignment_09_buell.ipynb
+++ b/assignment_09_buell.ipynb
@@ -1,25 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/naomibuell/DATA602/blob/main/assignment_10.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -27,15 +12,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# **Assignment 9**"
-      ],
       "metadata": {
         "id": "xqXbEBZtB8-u"
-      }
+      },
+      "source": [
+        "# **Assignment 9**"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "Iqswq2_ak3e-"
+      },
+      "outputs": [],
       "source": [
         "# core\n",
         "import matplotlib.pyplot as plt\n",
@@ -48,29 +38,27 @@
         "from sklearn.neighbors import KNeighborsClassifier as KNN\n",
         "from sklearn.model_selection import train_test_split as tts\n",
         "\n",
-        "#plotly or other graphing library"
-      ],
-      "metadata": {
-        "id": "Iqswq2_ak3e-"
-      },
-      "execution_count": null,
-      "outputs": []
+        "# plotly or other graphing library"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Load datasets here once and assign to variables iris and boston\n",
-        "\n",
-        "iris =\n"
-      ],
+      "execution_count": 3,
       "metadata": {
         "id": "92pRcki-k3kH"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Load datasets here once and assign to variables iris\n",
+        "\n",
+        "iris = pd.read_csv('https://raw.githubusercontent.com/mwaskom/seaborn-data/master/iris.csv')"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "lA9exQg2lFEn"
+      },
       "source": [
         "**Q1**\n",
         "\n",
@@ -78,22 +66,62 @@
         "\n",
         "* Return the first 5 rows of the data including the feature names as column headings in a DataFrame and a\n",
         "separate Python list containing target names"
-      ],
-      "metadata": {
-        "id": "lA9exQg2lFEn"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": 11,
       "metadata": {
         "id": "1kcEFauAlAxY"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "   sepal_length  sepal_width  petal_length  petal_width species\n",
+            "0           5.1          3.5           1.4          0.2  setosa\n",
+            "1           4.9          3.0           1.4          0.2  setosa\n",
+            "2           4.7          3.2           1.3          0.2  setosa\n",
+            "3           4.6          3.1           1.5          0.2  setosa\n",
+            "4           5.0          3.6           1.4          0.2  setosa\n",
+            "Type: <class 'pandas.core.frame.DataFrame'>\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Return the first 5 rows of the data, including the feature names as column headings in a df:\n",
+        "iris_head = iris.head()\n",
+        "print(iris_head)\n",
+        "print(\"Type:\", type(iris_head))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['setosa', 'versicolor', 'virginica']\n",
+            "Type: <class 'list'>\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Return a separate Python list of target names\n",
+        "target_names = iris['species'].unique().tolist()\n",
+        "print(target_names)\n",
+        "print(\"Type:\", type(target_names))"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "o2GEIhqzlT-i"
+      },
       "source": [
         "**Q2**\n",
         "\n",
@@ -102,22 +130,22 @@
         "* Fit the Iris dataset into a kNN model with neighbors=5 and predict the category of observations passed in\n",
         "argument new_observations. Return back the target names of each prediction (and not their encoded values,\n",
         " i.e. return setosa instead of 0)."
-      ],
-      "metadata": {
-        "id": "o2GEIhqzlT-i"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "wyqbRKh5lAzg"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "aVMa16PflnBv"
+      },
       "source": [
         "**Q3**\n",
         "\n",
@@ -128,68 +156,89 @@
         "* Fit KNN with the training data with number of neighbors equal to the function parameter neighbors\n",
         "\n",
         "* Generate and return back an accuracy score using the test data that was split out"
-      ],
-      "metadata": {
-        "id": "aVMa16PflnBv"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "5VIRae0xlA20"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "GupwxBDVl8n2"
+      },
       "source": [
         "**Q4**\n",
         "\n",
         "**Data set: Iris**\n",
         "\n",
         "* Generate an overfitting / underfitting curve of kNN each of the testing and training accuracy performance scores series for a range of neighbor (k) values from 1 to 30 and plot the curves (number of neighbors is x-axis, performance score is y-axis on the chart)."
-      ],
-      "metadata": {
-        "id": "GupwxBDVl8n2"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "M-6Ig8_QlA6J"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "-Qi-PJvxlA8O"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "CDFVf0vxmSMo"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "02DsBMnDmmXC"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.5"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
